# judge-tuner

./: README.md  app.md  prototype.ipynb  pyproject.toml
src/: data_generator.py  evaluation_runner.py  evaluation_suite.py  evaluation_suite_setup.py  llm_utils.py  main.py  parse_setup.py  update_evaluation_suite.py
src/evalforge/: __init__.py  code_evaluator.py  combined_scorer.py  criterion_assertion_map.py  evalforge.py  llm_evaluator.py  llm_utils.py
tuner-ui/: package.json  pnpm-lock.yaml
tuner-ui/app/: page.tsx
tuner-ui/app/(main)/: layout.tsx
tuner-ui/app/(main)/add/: page.tsx
tuner-ui/app/(main)/main/: page.tsx
tuner-ui/app/(main)/view/: page.tsx  test.json
tuner-ui/app/api/setup/: route.ts
tuner-ui/app/main/: page.tsx
tuner-ui/app/view/: page.tsx  test.json
tuner-ui/components/: Example.tsx  ExampleForm.tsx  Navbar.tsx
tuner-ui/components/ui/: card.tsx  dialog.tsx  hover-card.tsx  navigation-menu.tsx
