[tool.poetry]
name = "judge-tuner"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
instructor = "^1.4.3"
openai = "^1.47.0"
weave = "^0.51.8"
ipykernel = "^6.29.5"
black = "^24.8.0"
fastapi = "^0.100.0"
uvicorn = "^0.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
